@@ -25,11 +25,15 @@
  *  SUCH DAMAGE.
  *
  *
- *  $Id: dev_clmpcc.c,v 1.6.2.1 2008-01-18 19:12:28 debug Exp $
- *
  *  COMMENT: Cirrus Logic 4-Channel Communications Controller (CD2400/CD2401)
  *
- *  TODO
+ *  Used by OpenBSD/mvme88k.
+ *
+ *  TODO:
+ *	Multiple channels
+ *	Interrupts
+ *	RX
+ *	DMA?
  */
 
 #include <stdio.h>
@@ -48,7 +52,7 @@
 
 #include "clmpccreg.h"
 
-/*  #define debug fatal  */
+#define debug fatal
 
 #define	CLMPCC_LEN		0x200
 
@@ -65,8 +69,10 @@ DEVICE_ACCESS(clmpcc)
 	struct clmpcc_data *d = extra;
 	uint64_t idata = 0, odata = 0;
 
-	if (writeflag == MEM_WRITE)
+	if (writeflag == MEM_WRITE) {
 		idata = memory_readmax64(cpu, data, len);
+		d->reg[relative_addr] = idata;
+	}
 
 	if (writeflag == MEM_READ)
 		odata = d->reg[relative_addr];
@@ -76,17 +82,83 @@ DEVICE_ACCESS(clmpcc)
 	case 0:	/*  Used by OpenBSD/mvme88k when probing...  */
 		break;
 
-	case CLMPCC_REG_SCHR3:
-		console_putchar(d->console_handle, idata);
+	case CLMPCC_REG_TPR:	/*  Timer Period Register  */
+		break;
+
+	case CLMPCC_REG_CAR:	/*  Channel Access Register  */
+		/*  debug("[ clmpcc: selecting channel %i ]\n",
+		    (int) idata);  */
+		break;
+
+	case CLMPCC_REG_CCR:	/*  Channel Command Register:  */
+		odata = 0;
+		break;
+
+	case CLMPCC_REG_CMR:	/*  Channel Mode Register  */
+	case CLMPCC_REG_COR1:	/*  Channel Option Register #1  */
+	case CLMPCC_REG_COR2:	/*  Channel Option Register #2  */
+	case CLMPCC_REG_COR3:	/*  Channel Option Register #3  */
+	case CLMPCC_REG_COR4:	/*  Channel Option Register #4  */
+	case CLMPCC_REG_COR5:	/*  Channel Option Register #5  */
+	case CLMPCC_REG_COR6:	/*  Channel Option Register #6  */
+	case CLMPCC_REG_COR7:	/*  Channel Option Register #7  */
+	case CLMPCC_REG_SCHR1:	/*  Special Character Register #1  */
+	case CLMPCC_REG_SCHR2:	/*  Special Character Register #2  */
+	case CLMPCC_REG_SCHR3:	/*  Special Character Register #3  */
+	case CLMPCC_REG_SCHR4:	/*  Special Character Register #4  */
+	case CLMPCC_REG_SCRl:	/*  Special Character Range (low)  */
+	case CLMPCC_REG_SCRh:	/*  Special Character Range (high)  */
+	case CLMPCC_REG_LNXT:	/*  LNext Character  */
+		break;
+
+	case CLMPCC_REG_STCR:	/*  Special Transmit Command Register  */
+		if (writeflag == MEM_WRITE) {
+			if (idata == 0x0b) {
+				if (d->reg[CLMPCC_REG_CAR] == 0)
+					console_putchar(d->console_handle,
+					    d->reg[CLMPCC_REG_SCHR3]);
+				else
+					fatal("[ clmpcc: TODO: transmit "
+					    "to channel, CAR!=0 ]\n");
+
+				/*  Command done:  */
+				d->reg[CLMPCC_REG_STCR] = 0x00;
+			} else {
+				fatal("clmpcc: unimplemented STCR byte "
+				    "0x%02x\n", (int) idata);
+				exit(1);
+			}
+		}
+		break;
+
+	case CLMPCC_REG_RBPR:	/*  Receive Baud Rate Period Register  */
+	case CLMPCC_REG_TBPR:	/*  Transmit Baud Rate Period Register  */
+	case CLMPCC_REG_RCOR:	/*  Receive Clock Options Register  */
+	case CLMPCC_REG_TCOR:	/*  Transmit Clock Options Register  */
+		break;
+
+	case CLMPCC_REG_MSVR_RTS:/* Modem Signal Value Register, RTS  */
+	case CLMPCC_REG_MSVR_DTR:/* Modem Signal Value Register, DTR  */
+		break;
+
+	case CLMPCC_REG_RTPRl:	/*  Receive Timeout Period Register (low)  */
+	case CLMPCC_REG_RTPRh:	/*  Receive Timeout Period Register (high)  */
+		break;
+
+	case CLMPCC_REG_IER:	/*  Interrupt Enable Register  */
+	case CLMPCC_REG_LIVR:	/*  Local Interrupt Vector Register  */
+	case CLMPCC_REG_RPILR:	/*  Rx Priority Interrupt Level Register  */
+	case CLMPCC_REG_TPILR:	/*  Tx Priority Interrupt Level Register  */
+	case CLMPCC_REG_MPILR:	/*  Modem Priority Interrupt Level Register  */
 		break;
 
 	default:if (writeflag == MEM_READ)
-			debug("[ clmpcc: unimplemented READ from offset 0x%x ]"
+			fatal("[ clmpcc: unimplemented READ from offset 0x%x ]"
 			    "\n", (int)relative_addr);
 		else
-			debug("[ clmpcc: unimplemented WRITE to offset 0x%x: "
+			fatal("[ clmpcc: unimplemented WRITE to offset 0x%x: "
 			    "0x%x ]\n", (int)relative_addr, (int)idata);
-		/*  exit(1);  */
+		exit(1);
 	}
 
 	if (writeflag == MEM_READ)
